--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/qrcode": "^1.5.5",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "next": "15.3.4",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "socket.io": "^4.8.1",
