--- a/package.json
+++ b/package.json
@@ -10,14 +10,26 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.23",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-form": "^0.1.7",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.52.0",
     "@types/qrcode": "^1.5.5",
     "ai": "^4.3.18",
     "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "googleapis": "^153.0.0",
+    "lucide-react": "^0.526.0",
     "next": "15.3.4",
     "openai": "^5.9.0",
     "qrcode": "^1.5.4",
